<resources>
    <string name="app_name">MathGenius</string>
    <string name="title">Math Genius</string>
    <string name="button">Start</string>
    <string name="title_activity_math_genius_problem_select">MathGeniusProblemSelect</string>
    <string name="SelectionTitle">Select Type of Math</string>
    <string name="AdditionBtn">Addition</string>
    <string name="SubtractionBtn">Subtraction</string>
    <string name="multiplyBtn">Multiplication</string>
    <string name="divideBtn">Division</string>
    <string name="exitBtn">Exit</string>
    <string name="solve">Solve the Problem</string>
    <string name="solve_the_equation">Solve the Equation</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="submit">Submit</string>
    <string name="return_to_selection">Return to Selection</string>
</resources>
