<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MathGeniusMathSelection">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

    <TextView
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SelectionTitle"
        android:fontFamily="@font/adventure"
        android:textColor="#000000"
        android:textSize="45sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer"/>

    <TextView
        android:id="@+id/spacer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="75dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adventure"
        android:textSize="25sp"
        android:text="@string/AdditionBtn"
        app:layout_constraintTop_toBottomOf="@id/spacer1"/>

    <TextView
        android:id="@+id/spacer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/subButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adventure"
        android:textSize="25sp"
        android:text="@string/SubtractionBtn"
        app:layout_constraintTop_toBottomOf="@id/spacer2"/>

    <TextView
        android:id="@+id/spacer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/subButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/multiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adventure"
        android:textSize="25sp"
        android:text="@string/multiplyBtn"
        app:layout_constraintTop_toBottomOf="@id/spacer3"/>

    <TextView
        android:id="@+id/spacer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/multiButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/divideButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adventure"
        android:textSize="25sp"
        android:text="@string/divideBtn"
        app:layout_constraintTop_toBottomOf="@id/spacer4"/>

    <TextView
        android:id="@+id/spacer5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/divideButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adventure"
        android:textSize="25sp"
        android:text="@string/exitBtn"
        app:layout_constraintTop_toBottomOf="@id/spacer5"/>
    <TextView
        android:id="@+id/spacer6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="75dp"
        app:layout_constraintTop_toBottomOf="@id/exitButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

   </LinearLayout>
    </ScrollView>