<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MathGeniusSubtraction">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/adventure"
        android:text="@string/solve_the_equation"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/spacer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/correctDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adventure"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/trysDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adventure"
        android:gravity="left"
        android:textSize="20sp"
        android:paddingTop="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <TextView
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/problemArea1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="-50dp"
        android:textColor="#000000"
        android:fontFamily="@font/adventure"
        android:textSize="80sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/problemArea2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:fontFamily="@font/adventure"
        android:paddingTop="55dp"
        android:textSize="80sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/equalsLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:fontFamily="@font/adventure"
        android:textSize="80sp"
        android:paddingTop="55dp"
        android:paddingBottom="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:hint="@string/enter_answer"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/equalsLine" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/adventure"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/equalsLine" />

    <Button
        android:id="@+id/returnBtn"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/adventure"
        android:text="@string/return_to_selection"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/adventure"
        android:text="Exit"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitBtn"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>